fix overlapping class and ` issues

--- a/src/components/aboutPageBluebg.css
+++ b/src/components/aboutPageBluebg.css
@@ -11,7 +11,7 @@ video{
     height: 50% !important;
 }
 
-.container-wrap{
+.container-wrap-blue{
     display: flex;
     align-items: stretch;
     justify-content: center;
@@ -35,7 +35,7 @@ video{
 }
 
 @media screen and (max-width: 650px) {
-    .container-wrap{
+    .container-wrap-blue{
         flex-direction: column;
         row-gap: 20px;
         margin: 20px auto;
